Merged in feature/jdk-11 (pull request #80)
Feature/jdk 11, use nanoseconds

* JDK 11 fixes
* date util for nanoseconds

Approved-by: Chris Kelly <christopherjkelly@gmail.com>